feat(locky): implementation wip
